buildscript {
    ext.kotlin_version = '1.3.41'

    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}



group 'Spirite'
version '0.2.7'

apply plugin: 'java'
apply plugin: 'kotlin'

//compileJava {
//    options.compilerArgs << '--add-exports java.desktop/sun.awt.image=ALL-UNNAMED'
//}

sourceCompatibility = 1.8


repositories {
    mavenCentral()
}

dependencies {
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"

    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
    testCompile "org.jetbrains.kotlin:kotlin-test"
    //testCompile "org.jetbrains.kotlin:kotlin-test-junit"
    testCompile "io.mockk:mockk:1.9.3"

    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.+'

    // JOGL
    compile "org.jogamp.gluegen:gluegen-rt:2.3.1"
    compile "org.jogamp.jogl:jogl-all:2.3.1"

    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-aarch64"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-armv6"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-amd64"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6hf"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-i586"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-macosx-universal"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-amd64"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-i586"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-amd64"
    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-i586"

    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-aarch64"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-armv6"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-amd64"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6hf"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-i586"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-macosx-universal"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-amd64"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-i586"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-amd64"
    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-i586"


    compile files('lib/jpen-2.jar')
    compile files('lib/jpen-2-3-64.dll')

    // Apache Commons]
    compile "org.apache.commons:commons-collections4:4.0"
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
    kotlinOptions {
        languageVersion = "1.3"
    }
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}


test {
    useJUnitPlatform {
        excludeTags "Old"
    }
}

